--- a/.github/workflows/workflow_challenge.yml
+++ b/.github/workflows/workflow_challenge.yml
@@ -15,6 +15,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - id: step1
     - uses: actions/checkout@v2
     - name: Set up JDK 11
       uses: actions/setup-java@v2
@@ -22,5 +23,17 @@ jobs:
         java-version: '11'
         distribution: 'adopt'
         cache: maven
+    - id: step2
+    - name: Determine next tag
+      uses: anothrNick/github-tag-action@1.36.0
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        WITH_V: true
+        INITIAL_VERSION: 0.0.0
+        DRY_RUN: true
+    - id: step3
+    - name: Print tag name
+      run : echo ${{ steps.step2.outputs.new_tag }}
+    - id: step4
     - name: Build with Maven
       run: mvn -B package --file pom.xml
