--- a/.github/workflows/workflow_challenge.yml
+++ b/.github/workflows/workflow_challenge.yml
@@ -16,7 +16,7 @@ jobs:
 
     steps:
     - id: step1
-    - uses: actions/checkout@v2
+      uses: actions/checkout@v2
     - id: step2
     - name: Set up JDK 11
       uses: actions/setup-java@v2
