--- a/.github/workflows/workflow_challenge.yml
+++ b/.github/workflows/workflow_challenge.yml
@@ -18,14 +18,14 @@ jobs:
     - id: step1
       uses: actions/checkout@v2
     - id: step2
-    - name: Set up JDK 11
+      name: Set up JDK 11
       uses: actions/setup-java@v2
       with:
         java-version: '11'
         distribution: 'adopt'
         cache: maven
     - id: step3
-    - name: Determine next tag
+      name: Determine next tag
       uses: anothrNick/github-tag-action@1.36.0
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
@@ -33,8 +33,8 @@ jobs:
         INITIAL_VERSION: 0.0.0
         DRY_RUN: true
     - id: step4
-    - name: Print tag name
+      name: Print tag name
       run : echo ${{ steps.step3.outputs.new_tag }}
     - id: step5
-    - name: Build with Maven
+      name: Build with Maven
       run: mvn -B package --file pom.xml
