--- a/.github/workflows/workflow_challenge.yml
+++ b/.github/workflows/workflow_challenge.yml
@@ -37,4 +37,4 @@ jobs:
       run : echo ${{ steps.step3.outputs.new_tag }}
     - id: step5
       name: Build with Maven
-      run: mvn versions:set -DnewVersion={{ steps.step3.outputs.new_tag }}-SNAPSHOT ; mvn -B package --file pom.xml
+      run: mvn versions:set -DnewVersion=${{ steps.step3.outputs.new_tag }}-SNAPSHOT ; mvn -B package --file pom.xml
