--- a/.github/workflows/workflow_challenge.yml
+++ b/.github/workflows/workflow_challenge.yml
@@ -38,3 +38,10 @@ jobs:
     - id: step5
       name: Build with Maven
       run: mvn versions:set -DnewVersion=${{ steps.step3.outputs.new_tag }}-SNAPSHOT ; mvn -B package --file pom.xml
+    - id: step6
+      name: Create a Release
+      uses: elgohr/Github-Release-Action@master
+      env:
+        GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
+      with:
+        args: ${{ steps.step3.outputs.new_tag }}
