--- a/.github/workflows/workflow_challenge.yml
+++ b/.github/workflows/workflow_challenge.yml
@@ -39,6 +39,11 @@ jobs:
       name: Build with Maven
       run: mvn versions:set -DnewVersion=${{ steps.step3.outputs.new_tag }}-SNAPSHOT ; mvn -B package --file pom.xml
     - id: step6
+      name: Publish package
+      run: mvn --batch-mode deploy
+      env:
+         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - id: step7
       name: Create a Release
       uses: elgohr/Github-Release-Action@master
       env:
