--- a/.github/workflows/workflow_challenge.yml
+++ b/.github/workflows/workflow_challenge.yml
@@ -50,3 +50,10 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
       with:
         args: ${{ steps.step3.outputs.new_tag }}
+    - id: step8
+      name: Create tag
+      uses: anothrNick/github-tag-action@1.36.0
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        WITH_V: true
+        DRY_RUN: false
