--- a/.github/workflows/workflow_challenge.yml
+++ b/.github/workflows/workflow_challenge.yml
@@ -34,7 +34,7 @@ jobs:
         DRY_RUN: true
     - id: step4
       name: Build with Maven
-      run: mvn versions:set -DnewVersion=${{ steps.step3.outputs.new_tag }}-SNAPSHOT ; mvn -B package --file pom.xml
+      run: mvn versions:set -DnewVersion=${{ steps.step3.outputs.new_tag }} ; mvn -B package --file pom.xml
     - id: step5
       name: Publish package
       run: mvn --batch-mode deploy
